@@ -1,26 +1,0 @@
-﻿
-Microsoft Visual Studio Solution File, Format Version 12.00
-# Visual Studio 2012
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Pianist Mobile.CSharp", "Pianist Mobile.CSharp.csproj", "{9D43AC54-2CB8-06A9-9855-2806FB842211}"
-EndProject
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Pianist Mobile.CSharp.Editor", "Pianist Mobile.CSharp.Editor.csproj", "{017A84BA-5DD5-7392-1EBA-D1956D4732CA}"
-EndProject
-Global
-	GlobalSection(SolutionConfigurationPlatforms) = preSolution
-		Debug|Any CPU = Debug|Any CPU
-		Release|Any CPU = Release|Any CPU
-	EndGlobalSection
-	GlobalSection(ProjectConfigurationPlatforms) = postSolution
-		{9D43AC54-2CB8-06A9-9855-2806FB842211}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{9D43AC54-2CB8-06A9-9855-2806FB842211}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{9D43AC54-2CB8-06A9-9855-2806FB842211}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{9D43AC54-2CB8-06A9-9855-2806FB842211}.Release|Any CPU.Build.0 = Release|Any CPU
-		{017A84BA-5DD5-7392-1EBA-D1956D4732CA}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{017A84BA-5DD5-7392-1EBA-D1956D4732CA}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{017A84BA-5DD5-7392-1EBA-D1956D4732CA}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{017A84BA-5DD5-7392-1EBA-D1956D4732CA}.Release|Any CPU.Build.0 = Release|Any CPU
-	EndGlobalSection
-	GlobalSection(SolutionProperties) = preSolution
-		HideSolutionNode = FALSE
-	EndGlobalSection
-EndGlobal
